--- a/source/main_style.css
+++ b/source/main_style.css
@@ -39,3 +39,5 @@ svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
   @keyframes opc1 {
   0%{opacity:0;}
   100%{opacity:1;}}
+
+#report_1{top:10000px;}
