--- a/source/main_style.css
+++ b/source/main_style.css
@@ -40,4 +40,4 @@ svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
   0%{opacity:0;}
   100%{opacity:1;}}
 
-#report_1{top:10000px;}
+#report_1{left:300px;}
