--- a/source/main_style.css
+++ b/source/main_style.css
@@ -1,25 +1,32 @@
 /*Main Style*/
 body { background-color: #111111; margin-top: -60px;}
-@font-face {font-family:'minimalhard2'; src:url(source/mh2_.ttf) format('truetype');}
+@font-face {font-family:'minimalhard2'; src:url(source/minimalhard2_.ttf) format('truetype');}
 
 #logo_type{top:20px; left:4%; z-index: 3; position: fixed;}
-#logoSpread{font-family: "minimalhard2"; font-weight: bolder; font-size: 1.0vw; position: fixed; color: white; z-index: 3; top: 25px; padding: 0.1vw 2vw 0.1vw 0.1vw; opacity: 0; left: 6%; visibility: hidden; transition: all 0.15s ease-in; width:400px; }
+#logoSpread{font-family: "minimalhard2"; font-weight: bolder; font-size: 1.0vw; position: fixed; color: white; z-index: 3; top: 25px; padding: 0.1vw 2vw 0.1vw 0.1vw; opacity: 0; left: 6%; visibility: hidden; transition: all 0.2s ease-in; width:400px; }
 #logo_type:hover #logoSpread {opacity: 1; left: 7%; visibility: visible;}
 
 #nav_menu{position: fixed; margin-top: 84px;}
 #nav_menu {margin-left: 71%; z-index: 3;}
 #nav_menu tr {color:white;}
-#nav_menu tr th {font-family: "minimalhard2"; font-weight: lighter; font-size: 1.0vw; padding: 0.1vw 2vw 0.1vw 0.1vw;}
+#nav_menu tr th {font-family: "minimalhard2"; font-weight: lighter; font-size: 1.0vw; padding: 0.1vw 2vw 0.1vw 0.1vw; transition: all 0.2s ease-in;}
 svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
 
 #nav_menu tr > #menu1:hover #sub-menu {opacity: 1; visibility: visible;}
-#sub-menu {position: absolute; background: #222222; opacity: 0; visibility: hidden; transition: all 0.15s ease-in; font-family: "Noto Serif KR", serif; font-size: 0.8vw;}
+#sub-menu {position: absolute; background: #222222; opacity: 0; visibility: hidden; transition: all 0.2s ease-in; font-family: "Noto Serif KR", serif; font-size: 0.8vw;}
 #sub-menu > li {padding: 20px 25px; border-bottom: 1px solid #222222;}
 #sub-menu > li >  a {color: rgba(255,255,255,0.6); text-decoration: none;}
 
-#footer{font-family: "Noto Serif KR", serif; display: block; font-size:14px; color: white; top:-50px; width: 600px; margin:auto; position: relative; text-align: center;}
+#menu1:hover {text-decoration: underline;}
+#menu2:hover {text-decoration: underline;}
+#menu3:hover {text-decoration: underline;}
+#menu4:hover {text-decoration: underline;}
 
-/*Report*/
+#footer{font-family: "Noto Serif KR", serif; display: block; font-size:14px; color: #cccccc; top:3000px; width: 600px; height: 60px; margin:auto; position: relative; text-align: center;}
+
+#monitor {top: 25px; width: 100px; height: 40px; background: red; position: fixed; right: 0px; line-height: 40px; color: white; z-index: 5; }
+
+/*Intro*/
 #report_title{font-family: "Noto Serif KR", serif; font-size: 80px; opacity:1; color: #cccccc; top:350px; margin:auto; position: relative; text-align: center;  /*animation: move1 2s forwards;*/}
 @keyframes move1 {
   0%{opacity:0; left: 70%;}
@@ -30,7 +37,7 @@ svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
   0%{opacity:0;}
   100%{opacity:1;}}
 
-#report_video{position:relative; margin:auto; left:-8px; top:-120px; z-index:-1; width: 100%; animation: vd_ani 1.5s forwards; opacity: 0;}
+#report_video{position:relative; margin:auto; left:-8px; top:-180px; z-index:-1; width: 100%; animation: vd_ani 1.5s forwards; opacity: 0;}
 @keyframes vd_ani {
   0%{opacity:0;}
   100%{opacity:1;}}
@@ -40,4 +47,28 @@ svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
   0%{opacity:0;}
   100%{opacity:1;}}
 
-#report_1{left:300px;}
+/*Report_1*/
+#report_1{font-family: "Noto Serif KR", serif; font-size:28px; opacity:1; width: 400px; height: 50px; color: #cccccc; top:50px; margin:auto; margin-left: 20%; position: relative; text-align: left; line-height:1.6; overflow: hidden; white-space: nowrap; border-bottom: 0.5px solid gray; animation: typing 1s steps(150, end)both paused;}
+@keyframes typing {
+  from {width: 0;}
+  to {width: 400px;}}
+
+#report_1_data{display: block; text-align: center; margin: auto; margin-top:80px; opacity: 0; animation: opc1 1.2s 1s forwards paused;}
+@keyframes opc1 {
+  0%{opacity:0;}
+  100%{opacity:1;}}
+
+#report_1_citation1{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 0; color: #cccccc; top:50px; margin:auto; left:11.6%; position: relative; text-align: right; animation: opc1 1.2s 1s forwards paused;}
+  @keyframes opc1 {
+  0%{opacity:0;}
+  100%{opacity:1;}}
+
+#report_1_citation2{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 0; color: #cccccc; top:0px; margin:auto; left:11.6%; position: relative; text-align: right; animation: opc1 1.2s 1s forwards paused;}
+  @keyframes opc1 {
+  0%{opacity:0;}
+  100%{opacity:1;}}
+
+#report_1_citation3{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 0; color: #cccccc; top:-20px; margin:auto; left:-11.6%; position: relative; text-align: left; animation: opc1 1.2s 1s forwards paused;}
+  @keyframes opc1 {
+  0%{opacity:0;}
+  100%{opacity:1;}}
