--- a/source/main_style.css
+++ b/source/main_style.css
@@ -1,21 +1,23 @@
+
+
+
+
 /*Main Style*/
-
-body { background-color: #111111; margin-top: -60px;}
-@font-face {font-family: 'MINIMALHARD2'; font-style: normal; font-weight: normal;src: local('MINIMALHARD2'), url('mh2__.woff') format('woff');}
-
-#logo_type{top:20px; left:4%; z-index: 3; position: fixed;}
-#logoSpread{font-family: "minimalhard2"; font-weight: bolder; font-size: 1.0vw; position: fixed; color: white; z-index: 3; top: 25px; padding: 0.1vw 2vw 0.1vw 0.1vw; opacity: 0; left: 6%; visibility: hidden; transition: all 0.2s ease-in; width:400px; }
-#logo_type:hover #logoSpread {opacity: 1; left: 7%; visibility: visible;}
+html {scroll-behavior: smooth;}
+body { background-color: #222222; margin-top: -60px;}
+#logo_type{top:21px; right:92%; z-index: 11; position: fixed;}
+#logoSpread{font-family: 'Cantata One', serif; font-weight: bolder; font-size: 20px; position: fixed; color: #cccccc; z-index: 3; top: 28px; left: 9.2%; transition: all 0.2s ease-in; width:400px; }
+#logo_type:hover #logoSpread {z-index: 11;}
 
 #nav_menu{position: fixed; margin-top: 84px;}
-#nav_menu {margin-left: 71%; z-index: 3;}
-#nav_menu tr {color:white;}
-#nav_menu tr th {font-family: "minimalhard2"; font-weight: lighter; font-size: 1.0vw; padding: 0.1vw 2vw 0.1vw 0.1vw; transition: all 0.2s ease-in;}
-svg {margin-top: 60px; position: fixed; z-index: 2; left:-8px;}
+#nav_menu {right: 2.5%; z-index: 11;}
+#nav_menu tr {color:#cccccc;}
+#nav_menu tr th {font-family: 'Cantata One', serif; font-weight: lighter; font-size: 20px; padding: 0.1vw 2vw 0.1vw 0.1vw; transition: all 0.2s ease-in;}
+svg {top: 0px; position: fixed; z-index: 10; left:-8px;}
 
 #nav_menu tr > #menu1:hover #sub-menu {opacity: 1; visibility: visible;}
-#sub-menu {position: absolute; background: #222222; opacity: 0; visibility: hidden; transition: all 0.2s ease-in; font-family: "Noto Serif KR", serif; font-size: 0.8vw;}
-#sub-menu > li {padding: 20px 25px; border-bottom: 1px solid #222222;}
+#sub-menu {position: absolute; background: #333333; opacity: 0; visibility: hidden; transition: all 0.2s ease-in; font-family: "Noto Serif KR", serif; font-size: 15px;}
+#sub-menu > li {padding: 20px 25px; border-bottom: 1px solid #444444;}
 #sub-menu > li >  a {color: rgba(255,255,255,0.6); text-decoration: none;}
 
 #menu1:hover {text-decoration: underline;}
