--- a/source/main_style.css
+++ b/source/main_style.css
@@ -3,7 +3,7 @@
 
 
 /*Main Style*/
-html {scroll-behavior: smooth;}
+html {scroll-behavior: smooth; overscroll-behavior: none; overflow-behavior: none; scroll-snap-type: y mandatory;}
 body { background-color: #222222; margin-top: -60px;}
 #logo_type{top:21px; right:92%; z-index: 11; position: fixed;}
 #logoSpread{font-family: 'Cantata One', serif; font-weight: bolder; font-size: 20px; position: fixed; color: #cccccc; z-index: 3; top: 28px; left: 9.2%; transition: all 0.2s ease-in; width:400px; }
@@ -25,7 +25,7 @@ svg {top: 0px; position: fixed; z-index: 10; left:-8px;}
 #menu3:hover {text-decoration: underline;}
 #menu4:hover {text-decoration: underline;}
 
-#footer{font-family: "Noto Serif KR", serif; display: block; font-size:14px; color: #cccccc; top:5000px; width: 600px; height: 60px; margin:auto; position: relative; text-align: center;}
+#footer{font-family: "Noto Serif KR", serif; display: block; font-size:14px; color: #cccccc; top:600px; width: 600px; height: 60px; margin:auto; position: relative; text-align: center;}
 
 #monitor {top: 25px; width: 100px; height: 40px; background: red; position: fixed; right: 0px; line-height: 40px; color: white; z-index: 5; }
 
@@ -37,33 +37,21 @@ svg {top: 0px; position: fixed; z-index: 10; left:-8px;}
 #report_title{font-family: "Noto Serif KR", serif; font-size: 80px; opacity:1; color: #cccccc; top:350px; margin:auto; position: relative; text-align: center;}
 #report_title_contents{font-family: "Noto Serif KR", serif; font-size:16px; width: 800px; opacity: 1; color: #cccccc; top:400px; margin:auto; position: relative; text-align: center; line-height:2;}
 #report_video{position:relative; margin:auto; left:-8px; top:-180px; z-index:-1; width: 100%;}
-#report_caution{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:450px; margin:auto; position: relative; text-align: center;} 
+#report_caution{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:450px; margin:auto; position: relative; text-align: center;}
 
 
 
 
-/*Report_1*/
 
-#report_1{font-family: "Noto Serif KR", serif; font-size:28px; opacity:1; width: 400px; height: 50px; color: #cccccc; top:50px; margin:auto; margin-left: 22%; position: relative; text-align: left; line-height:1.6; border-bottom: 0.5px solid gray;}
+/* Contents */
 
-#report_1_data{display: block; text-align: center; margin: auto; margin-top:80px; opacity: 0; animation: move1 1.2s forwards paused;}
-@keyframes move1 {
-  0%{opacity:0; top:100px;}
-  100%{opacity:1; top:80px;}}
+#power_container{display: flex; flex-wrap: wrap; vertical-align: baseline; box-sizing: inherit; position: relative; color:#cccccc; width: 90%; top:300px; margin: 0 auto; overflow: hidden;}
+#container_contents{display: block; font-size:0.7vw; box-sizing: border-box; position: relative; left: 5%; margin: 0 auto; overflow: hidden; font-family: "Noto Serif KR", serif; text-align: left; color:#cccccc; line-height:2.0; flex:1;}
+#data_visualization{font-family: "Noto Serif KR", serif; font-size:0.6vw; text-align:right;position: relative; margin: 0 auto;}
+#class_line{display: block; position: relative; color: #cccccc; left: 0.1%; z-index: -1;}
 
-#report_1_citation1{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:50px; margin:auto; left:11.6%; position: relative; text-align: right;}
-#report_1_citation2{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:0px; margin:auto; left:11.6%; position: relative; text-align: right;}
-#report_1_citation3{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:-20px; margin:auto; left:-11.6%; position: relative; text-align: left;}
-
-
-
-
-/*Report_2*/
-
-#report_2{font-family: "Noto Serif KR", serif; font-size:28px; opacity:1; width: 400px; height: 50px; color: #cccccc; top:350px; margin:auto; margin-left: 22%; position: relative; text-align: left; line-height:1.6; border-bottom: 0.5px solid gray;}
-
-#report_2_data{display: block; text-align: center; margin: auto; margin-top:380px; opacity: 0; animation: move1 1.2s forwards paused;}
-
-#report_2_citation1{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:50px; margin:auto; left:11.6%; position: relative; text-align: right;}
-#report_2_citation2{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:0px; margin:auto; left:11.6%; position: relative; text-align: right;}
-#report_2_citation3{font-family: "Noto Serif KR", serif; font-size:12px; width: 800px; opacity: 1; color: #cccccc; top:-20px; margin:auto; left:-11.6%; position: relative; text-align: left;}
+iframe {
+  outline: none;
+  overflow: hidden;
+  white-space: nowrap;
+}
